<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PaymentResumeFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payer_data"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payer_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPayerSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payer_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPayerName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPayerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer_email" />

        <TextView
            android:id="@+id/tvPayerDocType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer_doc_type" />

        <TextView
            android:id="@+id/tvPayerDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer_document" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_data"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPaymentRef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payer_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPaymentDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payer_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPayerName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPaymentCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer_email" />

        <TextView
            android:id="@+id/tvPaymentTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer_doc_type" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:layout_margin="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCardNumberResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvCardExpirationResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvCardCVVResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvCardInstallmentsResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>