<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PaymentDataFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPaymentReferenceCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_reference"
        android:layout_margin="4dp"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPaymentDescriptionCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_description"
        android:layout_margin="4dp"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPaymentReferenceCont">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPaymentAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_amount"
        android:layout_margin="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPaymentDescriptionCont"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentAmount"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPaymentCurrencyCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_currency"
            android:layout_weight="70"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPaymentReferenceCont">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPaymentCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPaymentTotalCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_total"
            android:layout_weight="30"
            android:layout_margin="4dp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPaymentReferenceCont">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPaymentTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>